# pokemonitor

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  analyzer.py  db.py  pyproject.toml  server.py  telegram.py
extension/: background.js  content.js  dashboard.css  dashboard.html  dashboard.js  manifest.json  parser.js
test/: package.json  test-parser.js
